2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Uses the photo in the service if available
	* src/ServiceLocator.cs: Added code to get the photo when discovering
	  services
	* src/SendingHandler.cs: Added GetPhoto method
	* src/RequestHandler.cs: Handles requests for photos
	* src/Protocol.cs: ADded a photo headder tag
	* src/Preferences.cs: Added a debug photo
	* src/Application.cs: Added the preference object 

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: updated to use Protocol
	  class and real HTTP headers
	* src/Protocol.cs: Class to hold defines for headers and such
	* src/Preferences.cs: New class to store app prefs
	* src/Makefile.am, giver.mdp: Added new files

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: Sends files
	* src/RequestHandler.cs: Receives files
	* src/GiverService.cs: removed unneeded string
	* src/Application.cs: Added new handlers for new classes
	* src/Makefile.am: new files
	* src/PayloadInfo.cs: no longer needed
	* src/ReceivingHandler.cs: renamed to Request Handler
	* giver.mdp: Changed around some files

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs, src/Application.cs, src/ServiceLocator.cs,
	  src/SendingHandler.cs, src/ReceivingHandler.cs: Moved the socket
	  communication over to http

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Changed the service name so two instances can
	  run on a box
	* src/GiverMenuItem.cs: Switched the graphic size to one that fits
	* src/Application.cs: Debug
	* src/ServiceLocator.cs: Turned on the show locals for debugging
	* giver.mdp: truned on gdk.sharp

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/giver-48.png: added correct size

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: debug
	* src/Application.cs: Added wrappers of Avahi isn't running